# K816

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
crates/core/: Cargo.toml
crates/core/src/: data_blocks.rs  diag.rs  driver.rs  emit.rs  emit_object.rs  eval_expand.rs  fold_mode.rs  hla_syntax.rs  lexer.rs  lib.rs  link_diag.rs  lower.rs  normalize_hla.rs  peephole.rs  span.rs
crates/core/src/ast/: mod.rs
crates/core/src/hir/: mod.rs
crates/core/src/isa65816/: mod.rs
crates/core/src/lower/: exit_mode.rs  hla.rs
crates/core/src/parser/: api.rs  common.rs  conditions.rs  control.rs  data.rs  diagnostics.rs  expr.rs  items.rs  mod.rs  operands.rs  operations.rs  preprocess.rs  registers.rs  stmt.rs  tests.rs  warnings.rs
crates/core/src/sema/: analysis.rs  consts.rs  functions.rs  mod.rs  model.rs  tests.rs  vars.rs
crates/link/: Cargo.toml
crates/link/src/: config.rs  layout.rs  lib.rs  listing.rs  memory_usage.rs  render.rs  reorder.rs  tests.rs  types.rs
crates/link/src/layout/: anchors.rs  dp.rs
crates/link/src/tests/: config.rs  layout.rs  listing.rs  render.rs
crates/lsp/: Cargo.toml
crates/lsp/resources/: instruction-metadata.json
crates/lsp/src/: analysis.rs  convert.rs  debug.rs  document_symbols.rs  editor.rs  hover.rs  lib.rs  linker_config.rs  logging.rs  navigation.rs  project.rs  protocol.rs  server.rs  tests.rs  text.rs  types.rs  watcher.rs  workspace.rs
tests/golden/: Cargo.toml  build.rs  link.stub.k816ld.ron
tests/golden/examples/hello_uart/: expected.err  expected.lst  expected.xex
tests/golden/fixtures/: syntax-fixture-matrix.md
tests/golden/fixtures/data-indexed-strings/: expected.lst  input.k65
tests/golden/fixtures/emit-addr-direct/: expected.lst  input.k65
tests/golden/fixtures/emit-err-bare-label-needs-immediate/: expected.err  input.k65
tests/golden/fixtures/emit-err-dot-label-missing-colon/: expected.err  input.k65
tests/golden/fixtures/emit-err-dot-label-missing-colon-with-goto/: expected.err  input.k65
tests/golden/fixtures/emit-err-indirect-out-of-range-literal/: expected.err  input.k65
tests/golden/fixtures/emit-err-operand-overflow/: expected.err  input.k65
tests/golden/fixtures/emit-err-unknown-mnemonic-function-help/: expected.err  input.k65
tests/golden/fixtures/entry-no-contract-width-op-err/: expected.err  input.k65
tests/golden/fixtures/entry-prologue-a16-i16/: expected.lst  input.k65
tests/golden/fixtures/entry-prologue-a16-i8/: expected.lst  input.k65
tests/golden/fixtures/entry-prologue-a8-i16/: expected.lst  input.k65
tests/golden/fixtures/entry-prologue-a8-i8/: expected.lst  input.k65
tests/golden/fixtures/example-reset-vector/: expected.lst  expected.xex  input.k65  link.ld.ron
tests/golden/fixtures/functions-address-directive/: expected.lst  expected.xex  input.k65
tests/golden/fixtures/functions-fixed-addresses/: expected.lst  expected.xex  input.k65
tests/golden/fixtures/functions-two-segments/: expected.lst  input.k65
tests/golden/fixtures/inline-cross-unit-unknown-ident-err/: expected.err  input.10-helpers.k65  input.20-main.k65
tests/golden/fixtures/inline-repeat-immediate-param/: expected.lst  input.k65
tests/golden/fixtures/inline-repeat-immediate-param-cross-unit/: expected.lst  input.10-helpers.k65  input.20-main.k65
tests/golden/fixtures/link-anchor-out-of-range-err/: expected.err  input.k65  link.ld.ron
tests/golden/fixtures/link-dp/: expected.lst  input.k65  link.ld.ron
tests/golden/fixtures/link-dp-fixed-and-auto/: expected.lst  input.k65  link.ld.ron
tests/golden/fixtures/link-dp-fixed-out-of-range-err/: expected.err  input.k65
tests/golden/fixtures/link-dp-mixed/: expected.lst  input.10-mod_a.k65  input.20-mod_b.k65  link.ld.ron
tests/golden/fixtures/link-dp-overflow-err/: expected.err  input.10-bulk_a.k65  input.20-bulk_b.k65  link.ld.ron
tests/golden/fixtures/link-fixed-out-of-range/: expected.err  input.k65
tests/golden/fixtures/link-fixed-overlap/: expected.err  input.k65
tests/golden/fixtures/link-multi-const/: expected.lst  input.10-main.k65  input.10-main.o65  input.20-const.k65
tests/golden/fixtures/link-multi-const-err/: expected.err  input.10-main.k65
tests/golden/fixtures/link-multi-func/: expected.lst  input.10-main.k65  input.20-func.k65
tests/golden/fixtures/link-multi-func-cross-unit-call/: expected.lst  input.10-main.k65  input.20-helpers.k65
tests/golden/fixtures/link-multi-func-cross-unit-inline/: expected.lst  input.10-main.k65
tests/golden/fixtures/link-multi-func-cross-unit-inline-err/: expected.err  input.10-main.k65  input.20-helpers.k65
tests/golden/fixtures/link-multi-func-err/: expected.err  input.10-main.k65  input.20-func.k65
tests/golden/fixtures/link-multi-segment-multi-source/: expected.lst  expected.xex  input.10-boot.k65  input.20-main.k65  input.30-data.k65  link.ld.ron
tests/golden/fixtures/link-no-fit/: expected.err  input.k65  link.k816ld.ron  link.ld.ron
tests/golden/fixtures/link-strip-needs/: expected.lst  input.10-main.k65  input.20-mod.k65
tests/golden/fixtures/macros-macpack/: expected.lst  input.k65
tests/golden/fixtures/minimal/: expected.lst  input.k65
tests/golden/fixtures/mode-mismatch-proc-signature-naked/: expected.err  input.k65
tests/golden/fixtures/mode-mismatch-with-declared-signature/: expected.err  input.k65
tests/golden/fixtures/mode-tail-jump-external-mode-mismatch/: expected.err  input.10-main.k65  input.20-callee.k65
tests/golden/fixtures/mode-tail-jump-external-no-restore/: expected.lst  input.10-main.k65  input.20-callee.k65
tests/golden/fixtures/parse-abs-suffix-removed/: expected.err  input.k65
tests/golden/src/: harness.rs
tests/golden/tests/: golden.rs
(+649 files in other folders)
