[workspace]
members = [
  ".",
  "crates/core",
  "crates/eval",
  "crates/fmt",
  "crates/assets",
  "tests/golden",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
ariadne = "0.4"
camino = "1.1"
chumsky = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
indexmap = "2.7"
logos = "0.14"
pretty = "0.12"
rustc-hash = "1.1"
thiserror = "2.0"
assert_cmd = "2.0"
predicates = "3.1"
similar-asserts = "1.6"
tempfile = "3.15"

[package]
name = "k816"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
k816-core = { path = "crates/core" }
