[workspace]
members = [
  ".",
  "crates/core",
  "crates/isa65816",
  "crates/o65",
  "crates/link",
  "crates/eval",
  "crates/fmt",
  "crates/assets",
  "tests/golden",
]
default-members = [
  ".",
  "crates/core",
  "crates/isa65816",
  "crates/o65",
  "crates/link",
  "crates/eval",
  "crates/fmt",
  "crates/assets",
  "tests/golden",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "0BSD"

[workspace.dependencies]
anyhow = "1.0"
ariadne = "0.6"
camino = "1.1"
chumsky = "0.12"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp"] }
indexmap = "2.7"
logos = "0.16"
pretty = "0.12"
rustc-hash = "2.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
assert_cmd = "2.0"
predicates = "3.1"
similar-asserts = "1.6"
tempfile = "3.15"

[package]
name = "k816"
default-run = "k816"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
indexmap.workspace = true
k816-core = { path = "crates/core" }
k816-link = { path = "crates/link" }
k816-o65 = { path = "crates/o65" }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
