[package]
name = "k816-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true
toml.workspace = true
url.workspace = true
k816-core = { path = "../core" }
k816-fmt = { path = "../fmt" }
k816-isa65816 = { path = "../isa65816" }
