[package]
name = "k816-golden-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[dependencies]
anyhow.workspace = true
indexmap.workspace = true
k816-core = { path = "../../crates/core" }
similar-asserts.workspace = true
tempfile.workspace = true
